risc0/zirgen/dsl/test/repro/missing_semicolon.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error: unexpected expression

extern Print(x: Val);

component Top() {
  Print(42)
  Print(101);
}

